--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
